slot reference madness